# RocketNet

./: .gitignore  .gitmodules  CMakeLists.txt  Tests.cmake  copydll.py
Source/: CMakeLists.txt  library.cpp  library.h  main.cpp
Source/Tests/: CMakeLists.txt  Client.cpp  Host.cpp  Tests.cmake  main.cpp
Source/Tests/RocketNetCS/: .gitignore  RocketNetCS.sln
Source/Tests/RocketNetCS/RocketNetClient/: Program.cs
Source/Tests/RocketNetCS/RocketNetHost/: Program.cs  RocketNetHost.csproj
Source/Tests/RocketNetCS/RocketNetInterop/: RocketNet.cs  RocketNetNative.cs
